# coding-agents-kit

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yaml  release.yaml
configs/: README.md  falco.coding_agents_plugin.yaml  falco.yaml
docs/hooks/claude-code/: SPEC.md
docs/plugins/coding-agent-plugin/: SPEC.md
hooks/claude-code/: Cargo.toml  Makefile  README.md
hooks/claude-code/src/: main.rs
installers/linux/: README.md  coding-agents-kit.service  install.sh  package.sh
installers/macos/: README.md  build-falco.sh  coding-agents-kit-launcher.sh  dev.falcosecurity.coding-agents-kit.plist  distribution.xml  falco-macos-http-output.patch  install.sh  package.sh
installers/macos/pkg-resources/: conclusion.html  welcome.html
installers/macos/pkg-scripts/: postinstall  preinstall
installers/windows/: Package.wxs  README.md  build-falco.ps1  coding-agents-kit-launcher.ps1  falco-flush-stdout.patch  falco-windows-cmake-generator.patch  falco-windows-curl-noproxy.patch  falco-windows-http-output.patch  license.rtf  package.ps1
installers/windows/scripts/: postinstall.ps1  uninstall.ps1
output/: codex-compatibility-analysis.md
plugins/coding-agent-plugin/: Cargo.toml  README.md
plugins/coding-agent-plugin/src/: broker.rs  config.rs  event.rs  extract.rs  http_server.rs  lib.rs  socket_server.rs  source.rs  verdict.rs
rules/: README.md  seen.yaml
rules/default/: coding_agents_rules.yaml  mcp-skill-detection.yaml  persistence-detection.yaml  sandbox-disable.yaml  threat_rules.yaml
skills/coding-agents-falco-rules/: SKILL.md
tests/: Cargo.toml  README.md  falco.yaml  mock_broker.py  mock_broker_tcp.ps1  mock_broker_tcp.py  mock_broker_uds.ps1  rotation_test.ps1  stdout_forwarder.ps1  test_e2e.sh  test_e2e_windows.ps1  test_installed_service_windows.ps1  test_interceptor.sh  test_interceptor_windows.ps1  test_mcp_bypass.sh  test_mcp_skill_rules.sh  test_persistence_bypass.sh  test_persistence_rules.sh  test_sandbox_bypass.sh  test_sandbox_rules.sh  test_threat_bypass.sh  test_threat_rules.sh
tests/src/: e2e.rs  interceptor.rs  lib.rs  mock_broker.rs
tests/tests/: e2e.rs  e2e_monitor.rs  interceptor.rs
tools/coding-agents-kit-ctl/: Cargo.toml  README.md
tools/coding-agents-kit-ctl/src/: main.rs
tools/stdout-forwarder/: Cargo.toml
tools/stdout-forwarder/src/: main.rs
