[package]
name = "claude-interceptor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "claude-interceptor"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
