[package]
name = "claude-interceptor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "claude-interceptor"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

[target.'cfg(windows)'.dependencies]
uds_windows = "1.2"
