[package]
name = "coding-agent-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "coding_agent"
crate-type = ["cdylib"]

[dependencies]
falco_plugin = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
falco_event = "0.5"
crossbeam-channel = "0.5"
dashmap = "6"
tiny_http = "0.12"
anyhow = "1"
log = "0.4"

[target.'cfg(windows)'.dependencies]
uds_windows = "1.2"
