[package]
name = "coding-agents-kit-ctl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "coding-agents-kit-ctl"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
